# agent-report-mcp

./: .gitignore  README.md  auto_tracker.py  cli.py  example-report.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test-workflow.sh  wrapper.py
src/: auto-tracker.ts  cli.ts  index.ts  report-generator.ts  server.ts  tracker.ts  types.ts
